[gd_scene load_steps=17 format=3 uid="uid://cgcawoq8l0nsc"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_i5taf"]
[ext_resource type="Script" path="res://scripts/word.gd" id="2_dfyvr"]
[ext_resource type="Script" path="res://scripts/area_3d.gd" id="3_31o80"]

[sub_resource type="BoxMesh" id="BoxMesh_wem7x"]
size = Vector3(4, 2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_sjqlb"]
size = Vector3(4, 2, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2cdui"]
radius = 0.2
height = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_irlrm"]
radius = 0.2
height = 1.0

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_bvd2h"]

[sub_resource type="Sky" id="Sky_6dnlu"]
sky_material = SubResource("ProceduralSkyMaterial_bvd2h")
radiance_size = 2

[sub_resource type="Environment" id="Environment_8rasn"]
background_mode = 2
sky = SubResource("Sky_6dnlu")
ambient_light_source = 3
reflected_light_source = 2
tonemap_mode = 2

[sub_resource type="BoxMesh" id="BoxMesh_gbjh3"]
size = Vector3(1, 0.5, 0.25)

[sub_resource type="BoxShape3D" id="BoxShape3D_m2cmf"]
size = Vector3(1, 0.5, 0.25)

[sub_resource type="BoxShape3D" id="BoxShape3D_upjmi"]
size = Vector3(15, 7, 1)

[sub_resource type="Gradient" id="Gradient_yd8sm"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_r2maj"]
gradient = SubResource("Gradient_yd8sm")
width = 1980
height = 1080

[sub_resource type="SphereMesh" id="SphereMesh_7vkr0"]
radius = 0.05
height = 0.1
radial_segments = 16
rings = 8

[node name="Game" type="Node"]

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="Platform 1" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.5, -3, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Platform 1"]
mesh = SubResource("BoxMesh_wem7x")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform 1"]
shape = SubResource("BoxShape3D_sjqlb")

[node name="Platform 2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5, -3, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Platform 2"]
mesh = SubResource("BoxMesh_wem7x")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform 2"]
shape = SubResource("BoxShape3D_sjqlb")

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.5, -1.5, 0)
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_i5taf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
transform = Transform3D(0.999984, 0.00568974, 0, -0.00568974, 0.999984, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CapsuleMesh_2cdui")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_irlrm")

[node name="CoyoteTimer" type="Timer" parent="Player"]
wait_time = 0.1
one_shot = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 0, 0)
light_energy = 1.5

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8rasn")

[node name="Word" type="AnimatableBody3D" parent="." node_paths=PackedStringArray("mouse_area", "snap_points")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.37156, 2.55156, 0)
sync_to_physics = false
script = ExtResource("2_dfyvr")
mouse_area = NodePath("../GrabArea")
snap_points = NodePath("../SnapPoints")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Word"]
mesh = SubResource("BoxMesh_gbjh3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Word"]
shape = SubResource("BoxShape3D_m2cmf")

[node name="GrabArea" type="Area3D" parent="."]
monitoring = false
monitorable = false
script = ExtResource("3_31o80")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GrabArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
shape = SubResource("BoxShape3D_upjmi")
disabled = true

[node name="Sprite3D" type="Sprite3D" parent="GrabArea"]
visible = false
modulate = Color(0, 1, 1, 0.25098)
texture = SubResource("GradientTexture2D_r2maj")

[node name="SnapPoints" type="Node" parent="."]

[node name="Marker3D" type="Marker3D" parent="SnapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SnapPoints/Marker3D"]
mesh = SubResource("SphereMesh_7vkr0")

[node name="Marker3D2" type="Marker3D" parent="SnapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SnapPoints/Marker3D2"]
mesh = SubResource("SphereMesh_7vkr0")

[node name="Marker3D3" type="Marker3D" parent="SnapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SnapPoints/Marker3D3"]
mesh = SubResource("SphereMesh_7vkr0")

[node name="Marker3D4" type="Marker3D" parent="SnapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SnapPoints/Marker3D4"]
mesh = SubResource("SphereMesh_7vkr0")

[node name="Marker3D5" type="Marker3D" parent="SnapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SnapPoints/Marker3D5"]
mesh = SubResource("SphereMesh_7vkr0")

[node name="Marker3D6" type="Marker3D" parent="SnapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SnapPoints/Marker3D6"]
mesh = SubResource("SphereMesh_7vkr0")

[node name="Marker3D7" type="Marker3D" parent="SnapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SnapPoints/Marker3D7"]
mesh = SubResource("SphereMesh_7vkr0")

[node name="Marker3D8" type="Marker3D" parent="SnapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SnapPoints/Marker3D8"]
mesh = SubResource("SphereMesh_7vkr0")

[node name="Marker3D9" type="Marker3D" parent="SnapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SnapPoints/Marker3D9"]
mesh = SubResource("SphereMesh_7vkr0")

[node name="Marker3D10" type="Marker3D" parent="SnapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SnapPoints/Marker3D10"]
mesh = SubResource("SphereMesh_7vkr0")

[node name="Marker3D11" type="Marker3D" parent="SnapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SnapPoints/Marker3D11"]
mesh = SubResource("SphereMesh_7vkr0")

[node name="Marker3D12" type="Marker3D" parent="SnapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SnapPoints/Marker3D12"]
mesh = SubResource("SphereMesh_7vkr0")

[node name="Marker3D13" type="Marker3D" parent="SnapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SnapPoints/Marker3D13"]
mesh = SubResource("SphereMesh_7vkr0")

[node name="Marker3D14" type="Marker3D" parent="SnapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SnapPoints/Marker3D14"]
mesh = SubResource("SphereMesh_7vkr0")

[connection signal="input_event" from="Player" to="Player" method="_on_input_event"]
[connection signal="mouse_entered" from="Player" to="Player" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Player" to="Player" method="_on_mouse_exited"]
[connection signal="timeout" from="Player/CoyoteTimer" to="Player" method="_on_coyote_timeout"]
[connection signal="input_event" from="Word" to="Word" method="_on_input_event"]
